objects/Campaign_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Partners</relationshipLabel>
        <relationshipName>Campaign_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Date__c</fullName>
        <label>Disable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enable_Date__c</fullName>
        <label>Enable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if Partner is available for Opportunity Routing</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Roll_Up__c</fullName>
        <label>Opportunity Roll Up</label>
        <summaryForeignKey>CPO__c.Campaign_Partner__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <description>Used to designate the type of partner on any specific campaign. Added as part of SPD Enhancements October, 2015 Enhancements Release</description>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to partner account</description>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Partners</relationshipLabel>
        <relationshipName>Campaign_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>Partner__r.Dealer_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <label>Campaign Partner</label>
    <nameField>
        <label>Campaign Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>